// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correcly 1`] = `
"<!-- Generated by solve-dynamo-spec.js. Update this documentation by updating the spec-v1.json file. -->

# Solve API DynamoDB Spec  ![](https://img.shields.io/badge/version-undefined-orange.svg \\"Version undefined\\")

Documentation for the DynamoDB table

## Table of Contents

-   [Table Spec](#table-spec)
-   [Access Patterns](#access-patterns)
    -   [Get user profile info](#get-user-profile-info)
    -   [Get user available episodes](#get-user-available-episodes)
-   [Indexes](#indexes)
    -   [Main](#main)
-   [Author](#author)

## Table Spec

<details>

<summary>Params to create the table using the CLI or the AWS SDK:</summary>

\`\`\`json
{
  \\"TableName\\": \\"solveless-api\\",
  \\"AttributeDefinitions\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"AttributeType\\": \\"S\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"AttributeType\\": \\"S\\"
    }
  ],
  \\"KeySchema\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"KeyType\\": \\"HASH\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"KeyType\\": \\"RANGE\\"
    }
  ],
  \\"ProvisionedThroughput\\": {
    \\"ReadCapacityUnits\\": 5,
    \\"WriteCapacityUnits\\": 5
  },
  \\"BillingMode\\": \\"PAY_PER_REQUEST\\"
}
\`\`\`

</details>

\`createTable\` Using the CLI:

\`\`\`bash
$ aws dynamodb create-table --table-name solveless-api --cli-input-json create-table.json
\`\`\`

Using the AWS SDK:

\`\`\`javascript
const DynamoDB = require(\\"aws-sdk/clients/dynamodb\\");

const service = new DynamoDB({ region: process.env.AWS_REGION });

service.createTable(tableJson, (err, data) => {
  console.log(data);
});

\`\`\`

## Access Patterns

### Get user profile info

Perform a [DocumentClient.get](http://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/DynamoDB/DocumentClient.html#get-property \\"DocumentClient.get\\") against the Main index: 

\`\`\`json
{
  \\"TableName\\": \\"solveless-api\\",
  \\"Key\\": {
    \\"pk\\": \\"user-6549\\",
    \\"sk\\": \\"metadata:user-6549\\"
  }
}
\`\`\`

#### DynamoDB Records

| pk (HASH) | sk (RANGE)         |                       |                  |                     |                                         |
| --------- | ------------------ | --------------------- | ---------------- | ------------------- | --------------------------------------- |
| user-6549 | metadata:user-6549 | **currentPoints:** 87 | **winCount:** 54 | **playedCount:** 65 | **profile:** \`{\\"avatar\\":\\"https://... }\` |

#### DynaGen Usage

Use the generated function \`getUserProfileInfo()\`

\`\`\`javascript
const { getUserProfileInfo } = require(\\"@solve-hq/db\\");

const item = await getUserProfileInfo(\\"user-6549\\", \\"metadata:user-6549\\");

\`\`\`

##### Mapped Records

| id (HASH) | info (RANGE)       |                       |                  |                     |                                         |
| --------- | ------------------ | --------------------- | ---------------- | ------------------- | --------------------------------------- |
| user-6549 | metadata:user-6549 | **currentPoints:** 87 | **winCount:** 54 | **playedCount:** 65 | **profile:** \`{\\"avatar\\":\\"https://... }\` |

### Get user available episodes

Perform a [DocumentClient.query](http://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/DynamoDB/DocumentClient.html#query-property \\"DocumentClient.query\\") against the Main index with filter params:

\`\`\`json
{
  \\"TableName\\": \\"solveless-api\\",
  \\"KeyConditionExpression\\": \\"#pk = :pk\\",
  \\"ExpressionAttributeNames\\": {
    \\"#pk\\": \\"pk\\",
    \\"#releaseDate\\": \\"releaseDate\\",
    \\"#status\\": \\"status\\",
    \\"#title\\": \\"title\\"
  },
  \\"ExpressionAttributeValues\\": {
    \\":pk\\": \\"user-6549\\",
    \\":releaseDate\\": \\"01-12-2019\\",
    \\":status0\\": \\"READY\\",
    \\":status1\\": \\"PUBLISHED\\",
    \\":title\\": 3
  },
  \\"ScanIndexFoward\\": false,
  \\"FilterExpression\\": \\"#releaseDate <= :releaseDate AND #status IN (:status0, :status1) AND size(#title) >= :title\\"
}
\`\`\`

#### DynamoDB Records

| pk (HASH) | sk (RANGE)    |                             |                   |                               |
| --------- | ------------- | --------------------------- | ----------------- | ----------------------------- |
| user-6549 | available:300 | **releaseDate:** 01-01-2019 | **status:** READY | **title:** The Family Problem |
| user-6549 | available:50  | **releaseDate:** 01-01-2019 | **status:** READY | **title:** The Mafia Problem  |

## Indexes

### Main

| pk (HASH) | sk (RANGE)         |                             |                   |                               |                                         |
| --------- | ------------------ | --------------------------- | ----------------- | ----------------------------- | --------------------------------------- |
| user-6549 | metadata:user-6549 | **currentPoints:** 87       | **winCount:** 54  | **playedCount:** 65           | **profile:** \`{\\"avatar\\":\\"https://... }\` |
| user-6549 | available:50       | **releaseDate:** 01-01-2019 | **status:** READY | **title:** The Mafia Problem  |                                         |
| user-6549 | available:300      | **releaseDate:** 01-01-2019 | **status:** READY | **title:** The Family Problem |                                         |

## Author

Spec authored by undefined and generated by [dynamodb-spec-generator](https://github.com/ericallam/dynamodb-spec-generator \\"DynamoDB Spec Generator\\")
"
`;

exports[`renders correctly when a sparse index has no records 1`] = `
"<!-- Generated by solve-dynamo-spec.js. Update this documentation by updating the spec-v1.json file. -->

# Solve API DynamoDB Spec  ![](https://img.shields.io/badge/version-undefined-orange.svg \\"Version undefined\\")

Documentation for the DynamoDB table

## Table of Contents

-   [Table Spec](#table-spec)
-   [Access Patterns](#access-patterns)
    -   [Get all user partition items](#get-all-user-partition-items)
-   [Indexes](#indexes)
    -   [Main](#main)
    -   [Gsi2](#gsi2)
-   [Author](#author)

## Table Spec

<details>

<summary>Params to create the table using the CLI or the AWS SDK:</summary>

\`\`\`json
{
  \\"TableName\\": \\"solveless-api\\",
  \\"AttributeDefinitions\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"AttributeType\\": \\"S\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"AttributeType\\": \\"S\\"
    }
  ],
  \\"KeySchema\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"KeyType\\": \\"HASH\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"KeyType\\": \\"RANGE\\"
    }
  ],
  \\"GlobalSecondaryIndexes\\": [
    {
      \\"IndexName\\": \\"gsi2\\",
      \\"KeySchema\\": [
        {
          \\"AttributeName\\": \\"order\\",
          \\"KeyType\\": \\"HASH\\"
        },
        {
          \\"AttributeName\\": \\"sk\\",
          \\"KeyType\\": \\"RANGE\\"
        }
      ]
    }
  ],
  \\"ProvisionedThroughput\\": {
    \\"ReadCapacityUnits\\": 5,
    \\"WriteCapacityUnits\\": 5
  },
  \\"BillingMode\\": \\"PAY_PER_REQUEST\\"
}
\`\`\`

</details>

\`createTable\` Using the CLI:

\`\`\`bash
$ aws dynamodb create-table --table-name solveless-api --cli-input-json create-table.json
\`\`\`

Using the AWS SDK:

\`\`\`javascript
const DynamoDB = require(\\"aws-sdk/clients/dynamodb\\");

const service = new DynamoDB({ region: process.env.AWS_REGION });

service.createTable(tableJson, (err, data) => {
  console.log(data);
});

\`\`\`

## Access Patterns

### Get all user partition items

Perform a [DocumentClient.query](http://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/DynamoDB/DocumentClient.html#query-property \\"DocumentClient.query\\") against the Main index:

\`\`\`json
{
  \\"TableName\\": \\"solveless-api\\",
  \\"KeyConditionExpression\\": \\"#pk = :pk\\",
  \\"ExpressionAttributeNames\\": {
    \\"#pk\\": \\"pk\\"
  },
  \\"ExpressionAttributeValues\\": {
    \\":pk\\": \\"user-6549\\"
  }
}
\`\`\`

#### DynamoDB Records

| pk (HASH) | sk (RANGE)         |                             |                   |                              |                                         |
| --------- | ------------------ | --------------------------- | ----------------- | ---------------------------- | --------------------------------------- |
| user-6549 | episode:available  | **releaseDate:** 01-01-2019 | **status:** READY | **title:** The Mafia Problem |                                         |
| user-6549 | metadata:user-6549 | **currentPoints:** 87       | **winCount:** 54  | **playedCount:** 65          | **profile:** \`{\\"avatar\\":\\"https://... }\` |

## Indexes

### Main

| pk (HASH) | sk (RANGE)         |                             |                   |                              |                                         |
| --------- | ------------------ | --------------------------- | ----------------- | ---------------------------- | --------------------------------------- |
| user-6549 | metadata:user-6549 | **currentPoints:** 87       | **winCount:** 54  | **playedCount:** 65          | **profile:** \`{\\"avatar\\":\\"https://... }\` |
| user-6549 | episode:available  | **releaseDate:** 01-01-2019 | **status:** READY | **title:** The Mafia Problem |                                         |

### Gsi2

| order (HASH) | sk (RANGE) |
| ------------ | ---------- |

## Author

Spec authored by undefined and generated by [dynamodb-spec-generator](https://github.com/ericallam/dynamodb-spec-generator \\"DynamoDB Spec Generator\\")
"
`;

exports[`renders query access patterns using only a partion key correclty 1`] = `
"<!-- Generated by solve-dynamo-spec.js. Update this documentation by updating the spec-v1.json file. -->

# Solve API DynamoDB Spec  ![](https://img.shields.io/badge/version-undefined-orange.svg \\"Version undefined\\")

Documentation for the DynamoDB table

## Table of Contents

-   [Table Spec](#table-spec)
-   [Access Patterns](#access-patterns)
    -   [Get all user partition items](#get-all-user-partition-items)
    -   [Get all ready episodes](#get-all-ready-episodes)
    -   [Get all stopped episodes](#get-all-stopped-episodes)
-   [Indexes](#indexes)
    -   [Main](#main)
    -   [Gsi1](#gsi1)
-   [Author](#author)

## Table Spec

<details>

<summary>Params to create the table using the CLI or the AWS SDK:</summary>

\`\`\`json
{
  \\"TableName\\": \\"solveless-api\\",
  \\"AttributeDefinitions\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"AttributeType\\": \\"S\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"AttributeType\\": \\"S\\"
    }
  ],
  \\"KeySchema\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"KeyType\\": \\"HASH\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"KeyType\\": \\"RANGE\\"
    }
  ],
  \\"GlobalSecondaryIndexes\\": [
    {
      \\"IndexName\\": \\"gsi1\\",
      \\"KeySchema\\": [
        {
          \\"AttributeName\\": \\"status\\",
          \\"KeyType\\": \\"HASH\\"
        },
        {
          \\"AttributeName\\": \\"sk\\",
          \\"KeyType\\": \\"RANGE\\"
        }
      ]
    }
  ],
  \\"ProvisionedThroughput\\": {
    \\"ReadCapacityUnits\\": 5,
    \\"WriteCapacityUnits\\": 5
  },
  \\"BillingMode\\": \\"PAY_PER_REQUEST\\"
}
\`\`\`

</details>

\`createTable\` Using the CLI:

\`\`\`bash
$ aws dynamodb create-table --table-name solveless-api --cli-input-json create-table.json
\`\`\`

Using the AWS SDK:

\`\`\`javascript
const DynamoDB = require(\\"aws-sdk/clients/dynamodb\\");

const service = new DynamoDB({ region: process.env.AWS_REGION });

service.createTable(tableJson, (err, data) => {
  console.log(data);
});

\`\`\`

## Access Patterns

### Get all user partition items

Perform a [DocumentClient.query](http://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/DynamoDB/DocumentClient.html#query-property \\"DocumentClient.query\\") against the Main index:

\`\`\`json
{
  \\"TableName\\": \\"solveless-api\\",
  \\"KeyConditionExpression\\": \\"#pk = :pk\\",
  \\"ExpressionAttributeNames\\": {
    \\"#pk\\": \\"pk\\"
  },
  \\"ExpressionAttributeValues\\": {
    \\":pk\\": \\"user-6549\\"
  }
}
\`\`\`

#### DynamoDB Records

| pk (HASH) | sk (RANGE)         |                             |                   |                              |                                         |
| --------- | ------------------ | --------------------------- | ----------------- | ---------------------------- | --------------------------------------- |
| user-6549 | episode:available  | **releaseDate:** 01-01-2019 | **status:** READY | **title:** The Mafia Problem |                                         |
| user-6549 | metadata:user-6549 | **currentPoints:** 87       | **winCount:** 54  | **playedCount:** 65          | **profile:** \`{\\"avatar\\":\\"https://... }\` |

### Get all ready episodes

Perform a [DocumentClient.query](http://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/DynamoDB/DocumentClient.html#query-property \\"DocumentClient.query\\") against the Gsi1 index:

\`\`\`json
{
  \\"TableName\\": \\"solveless-api\\",
  \\"KeyConditionExpression\\": \\"#status = :status\\",
  \\"ExpressionAttributeNames\\": {
    \\"#status\\": \\"status\\"
  },
  \\"ExpressionAttributeValues\\": {
    \\":status\\": \\"READY\\"
  },
  \\"IndexName\\": \\"gsi1\\"
}
\`\`\`

#### DynamoDB Records

| status (HASH) | sk (RANGE)        |                   |                             |                              |
| ------------- | ----------------- | ----------------- | --------------------------- | ---------------------------- |
| READY         | episode:available | **pk:** user-6549 | **releaseDate:** 01-01-2019 | **title:** The Mafia Problem |

### Get all stopped episodes

Perform a [DocumentClient.query](http://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/DynamoDB/DocumentClient.html#query-property \\"DocumentClient.query\\") against the Gsi1 index:

\`\`\`json
{
  \\"TableName\\": \\"solveless-api\\",
  \\"KeyConditionExpression\\": \\"#status = :status\\",
  \\"ExpressionAttributeNames\\": {
    \\"#status\\": \\"status\\"
  },
  \\"ExpressionAttributeValues\\": {
    \\":status\\": \\"STOPPED\\"
  },
  \\"IndexName\\": \\"gsi1\\"
}
\`\`\`

## Indexes

### Main

| pk (HASH) | sk (RANGE)         |                             |                   |                              |                                         |
| --------- | ------------------ | --------------------------- | ----------------- | ---------------------------- | --------------------------------------- |
| user-6549 | metadata:user-6549 | **currentPoints:** 87       | **winCount:** 54  | **playedCount:** 65          | **profile:** \`{\\"avatar\\":\\"https://... }\` |
| user-6549 | episode:available  | **releaseDate:** 01-01-2019 | **status:** READY | **title:** The Mafia Problem |                                         |

### Gsi1

| status (HASH) | sk (RANGE)        |                   |                             |                              |
| ------------- | ----------------- | ----------------- | --------------------------- | ---------------------------- |
| READY         | episode:available | **pk:** user-6549 | **releaseDate:** 01-01-2019 | **title:** The Mafia Problem |

## Author

Spec authored by undefined and generated by [dynamodb-spec-generator](https://github.com/ericallam/dynamodb-spec-generator \\"DynamoDB Spec Generator\\")
"
`;

exports[`renders sparse indexes correcly 1`] = `
"<!-- Generated by solve-dynamo-spec.js. Update this documentation by updating the spec-v1.json file. -->

# Solve API DynamoDB Spec  ![](https://img.shields.io/badge/version-undefined-orange.svg \\"Version undefined\\")

Documentation for the DynamoDB table

## Table of Contents

-   [Table Spec](#table-spec)
-   [Access Patterns](#access-patterns)
    -   [Get user profile info](#get-user-profile-info)
    -   [Get user available episodes](#get-user-available-episodes)
-   [Indexes](#indexes)
    -   [Main](#main)
    -   [Gsi1](#gsi1)
-   [Author](#author)

## Table Spec

<details>

<summary>Params to create the table using the CLI or the AWS SDK:</summary>

\`\`\`json
{
  \\"TableName\\": \\"solveless-api\\",
  \\"AttributeDefinitions\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"AttributeType\\": \\"S\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"AttributeType\\": \\"S\\"
    }
  ],
  \\"KeySchema\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"KeyType\\": \\"HASH\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"KeyType\\": \\"RANGE\\"
    }
  ],
  \\"GlobalSecondaryIndexes\\": [
    {
      \\"IndexName\\": \\"gsi1\\",
      \\"KeySchema\\": [
        {
          \\"AttributeName\\": \\"status\\",
          \\"KeyType\\": \\"HASH\\"
        },
        {
          \\"AttributeName\\": \\"sk\\",
          \\"KeyType\\": \\"RANGE\\"
        }
      ]
    }
  ],
  \\"ProvisionedThroughput\\": {
    \\"ReadCapacityUnits\\": 5,
    \\"WriteCapacityUnits\\": 5
  },
  \\"BillingMode\\": \\"PAY_PER_REQUEST\\"
}
\`\`\`

</details>

\`createTable\` Using the CLI:

\`\`\`bash
$ aws dynamodb create-table --table-name solveless-api --cli-input-json create-table.json
\`\`\`

Using the AWS SDK:

\`\`\`javascript
const DynamoDB = require(\\"aws-sdk/clients/dynamodb\\");

const service = new DynamoDB({ region: process.env.AWS_REGION });

service.createTable(tableJson, (err, data) => {
  console.log(data);
});

\`\`\`

## Access Patterns

### Get user profile info

Perform a [DocumentClient.get](http://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/DynamoDB/DocumentClient.html#get-property \\"DocumentClient.get\\") against the Main index: 

\`\`\`json
{
  \\"TableName\\": \\"solveless-api\\",
  \\"Key\\": {
    \\"pk\\": \\"user-6549\\",
    \\"sk\\": \\"metadata:user-6549\\"
  }
}
\`\`\`

#### DynamoDB Records

| pk (HASH) | sk (RANGE)         |                       |                  |                     |                                         |
| --------- | ------------------ | --------------------- | ---------------- | ------------------- | --------------------------------------- |
| user-6549 | metadata:user-6549 | **currentPoints:** 87 | **winCount:** 54 | **playedCount:** 65 | **profile:** \`{\\"avatar\\":\\"https://... }\` |

### Get user available episodes

Perform a [DocumentClient.query](http://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/DynamoDB/DocumentClient.html#query-property \\"DocumentClient.query\\") against the Main index with a \`#sk = :sk\` condition on the sort key with filter params:

\`\`\`json
{
  \\"TableName\\": \\"solveless-api\\",
  \\"KeyConditionExpression\\": \\"#pk = :pk and #sk = :sk\\",
  \\"ExpressionAttributeNames\\": {
    \\"#pk\\": \\"pk\\",
    \\"#sk\\": \\"sk\\",
    \\"#releaseDate\\": \\"releaseDate\\",
    \\"#status\\": \\"status\\",
    \\"#title\\": \\"title\\"
  },
  \\"ExpressionAttributeValues\\": {
    \\":pk\\": \\"user-6549\\",
    \\":sk\\": \\"episode:available\\",
    \\":releaseDate\\": \\"01-12-2019\\",
    \\":status0\\": \\"READY\\",
    \\":status1\\": \\"PUBLISHED\\",
    \\":title\\": 3
  },
  \\"FilterExpression\\": \\"#releaseDate <= :releaseDate AND #status IN (:status0, :status1) AND size(#title) >= :title\\",
  \\"Limit\\": 10
}
\`\`\`

#### DynamoDB Records

| pk (HASH) | sk (RANGE)        |                             |                   |                              |
| --------- | ----------------- | --------------------------- | ----------------- | ---------------------------- |
| user-6549 | episode:available | **releaseDate:** 01-01-2019 | **status:** READY | **title:** The Mafia Problem |

## Indexes

### Main

| pk (HASH) | sk (RANGE)         |                             |                   |                              |                                         |
| --------- | ------------------ | --------------------------- | ----------------- | ---------------------------- | --------------------------------------- |
| user-6549 | metadata:user-6549 | **currentPoints:** 87       | **winCount:** 54  | **playedCount:** 65          | **profile:** \`{\\"avatar\\":\\"https://... }\` |
| user-6549 | episode:available  | **releaseDate:** 01-01-2019 | **status:** READY | **title:** The Mafia Problem |                                         |

### Gsi1

| status (HASH) | sk (RANGE)        |                   |                             |                              |
| ------------- | ----------------- | ----------------- | --------------------------- | ---------------------------- |
| READY         | episode:available | **pk:** user-6549 | **releaseDate:** 01-01-2019 | **title:** The Mafia Problem |

## Author

Spec authored by undefined and generated by [dynamodb-spec-generator](https://github.com/ericallam/dynamodb-spec-generator \\"DynamoDB Spec Generator\\")
"
`;

exports[`renders this spec correctly 1`] = `
"<!-- Generated by solve-dynamo-spec.js. Update this documentation by updating the spec-v1.json file. -->

# Solveless API DynamoDB Spec  ![](https://img.shields.io/badge/version-0.1.0-orange.svg \\"Version 0.1.0\\")

The table design for the Solveless API service

## Table of Contents

-   [Table Spec](#table-spec)
-   [Access Patterns](#access-patterns)
    -   [Get all content ordered by list position for a specific catalogue](#get-all-content-ordered-by-list-position-for-a-specific-catalogue)
-   [Indexes](#indexes)
    -   [Main](#main)
    -   [SubscriptionLookup](#subscriptionlookup)
    -   [CatalogueLookup](#cataloguelookup)
-   [Author](#author)

## Table Spec

<details>

<summary>Params to create the table using the CLI or the AWS SDK:</summary>

\`\`\`json
{
  \\"AttributeDefinitions\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"AttributeType\\": \\"S\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"AttributeType\\": \\"S\\"
    },
    {
      \\"AttributeName\\": \\"subscriptionId\\",
      \\"AttributeType\\": \\"S\\"
    },
    {
      \\"AttributeName\\": \\"data\\",
      \\"AttributeType\\": \\"S\\"
    },
    {
      \\"AttributeName\\": \\"catalogueId\\",
      \\"AttributeType\\": \\"S\\"
    }
  ],
  \\"TableName\\": \\"solveless-api\\",
  \\"KeySchema\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"KeyType\\": \\"HASH\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"KeyType\\": \\"RANGE\\"
    }
  ],
  \\"ProvisionedThroughput\\": {
    \\"ReadCapacityUnits\\": 5,
    \\"WriteCapacityUnits\\": 5
  },
  \\"GlobalSecondaryIndexes\\": [
    {
      \\"KeySchema\\": [
        {
          \\"AttributeName\\": \\"subscriptionId\\",
          \\"KeyType\\": \\"HASH\\"
        },
        {
          \\"AttributeName\\": \\"data\\",
          \\"KeyType\\": \\"RANGE\\"
        }
      ],
      \\"IndexName\\": \\"SubscriptionLookup\\",
      \\"Projection\\": {
        \\"ProjectionType\\": \\"ALL\\"
      }
    },
    {
      \\"KeySchema\\": [
        {
          \\"AttributeName\\": \\"catalogueId\\",
          \\"KeyType\\": \\"HASH\\"
        },
        {
          \\"AttributeName\\": \\"data\\",
          \\"KeyType\\": \\"RANGE\\"
        }
      ],
      \\"IndexName\\": \\"CatalogueLookup\\",
      \\"Projection\\": {
        \\"ProjectionType\\": \\"ALL\\"
      }
    }
  ]
}
\`\`\`

</details>

\`createTable\` Using the CLI:

\`\`\`bash
$ aws dynamodb create-table --table-name solveless-api --cli-input-json create-table.json
\`\`\`

Using the AWS SDK:

\`\`\`javascript
const DynamoDB = require(\\"aws-sdk/clients/dynamodb\\");

const service = new DynamoDB({ region: process.env.AWS_REGION });

service.createTable(tableJson, (err, data) => {
  console.log(data);
});

\`\`\`

## Access Patterns

### Get all content ordered by list position for a specific catalogue

Perform a [DocumentClient.query](http://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/DynamoDB/DocumentClient.html#query-property \\"DocumentClient.query\\") against the CatalogueLookup index:

\`\`\`json
{
  \\"TableName\\": \\"solveless-api\\",
  \\"KeyConditionExpression\\": \\"#catalogueId = :catalogueId\\",
  \\"ExpressionAttributeNames\\": {
    \\"#catalogueId\\": \\"catalogueId\\"
  },
  \\"ExpressionAttributeValues\\": {
    \\":catalogueId\\": \\"catalogue-a\\"
  },
  \\"ScanIndexFoward\\": false,
  \\"IndexName\\": \\"CatalogueLookup\\"
}
\`\`\`

#### DynamoDB Records

| catalogueId (HASH) | data (RANGE)            |                    |                              |                          |
| ------------------ | ----------------------- | ------------------ | ---------------------------- | ------------------------ |
| catalogue-a        | 12:2019-02-12T12:00:00Z | **pk:** episode-54 | **sk:** metadata:catalogue-a | **contentType:** episode |

## Indexes

### Main

| pk (HASH)  | sk (RANGE)                                 |                                     |                                   |                          |                                    |
| ---------- | ------------------------------------------ | ----------------------------------- | --------------------------------- | ------------------------ | ---------------------------------- |
| episode-54 | metadata:episode                           | **contentType:** episode            | **title:** Who's the target?      |                          |                                    |
| episode-54 | metadata:catalogue-b                       | **catalogueId:** catalogue-b        | **data:** 32:2019-02-12T12:00:00Z | **contentType:** episode |                                    |
| episode-54 | metadata:catalogue-a                       | **catalogueId:** catalogue-a        | **data:** 12:2019-02-12T12:00:00Z | **contentType:** episode |                                    |
| series-54  | metadata:catalogue-a                       | **catalogue:** catalogue-a          | **data:** 55:2019-02-10T12:00:00Z | **contentType:** series  |                                    |
| user-8790  | episode:completed:2019-01-22T10:28:49.930Z | **episodeId:** episode-55           |                                   |                          |                                    |
| user-8790  | episode:completed:2019-01-22T11:15:00.000Z | **episodeId:** episode-102          |                                   |                          |                                    |
| user-8790  | completed-episodes                         | **ids:** \`[\\"episode-102\\",\\"epi... }\` |                                   |                          |                                    |
| user-8790  | metadata                                   | **catalogueId:** catalogue-a        | **completed:** 55                 | **correctGuesses:** 24   | **liveCompleted:** 4               |
| user-8790  | sub:Production:sub-9091                    | **subscriptionId:** sub-9091        | **expiresDate:** 2019-02-24       | **data:** user:user-8790 | **subscriptionStatus:** subscribed |

### SubscriptionLookup

| subscriptionId (HASH) | data (RANGE)   |                   |                                 |                             |                                    |
| --------------------- | -------------- | ----------------- | ------------------------------- | --------------------------- | ---------------------------------- |
| sub-9091              | user:user-8790 | **pk:** user-8790 | **sk:** sub:Production:sub-9091 | **expiresDate:** 2019-02-24 | **subscriptionStatus:** subscribed |

### CatalogueLookup

| catalogueId (HASH) | data (RANGE)            |                    |                              |                          |
| ------------------ | ----------------------- | ------------------ | ---------------------------- | ------------------------ |
| catalogue-b        | 32:2019-02-12T12:00:00Z | **pk:** episode-54 | **sk:** metadata:catalogue-b | **contentType:** episode |
| catalogue-a        | 12:2019-02-12T12:00:00Z | **pk:** episode-54 | **sk:** metadata:catalogue-a | **contentType:** episode |

## Author

Spec authored by Eric Allam and generated by [dynamodb-spec-generator](https://github.com/ericallam/dynamodb-spec-generator \\"DynamoDB Spec Generator\\")
"
`;
